miMicroTRM/deploy/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
     app: mimicrotrm
  name: mimicrotrm
  namespace: despliegues1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimicrotrm
  template:
      metadata:
        labels:
          app: mimicrotrm
      spec:
        containers:
        - name: mimicrotrm-k8s-cfg
          image: calireyes/mimicrotrm:1.2
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
            protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  labels:
     app: mimicrotrm
  name: mimicrotrm
  namespace: despliegues1
spec:
  type: LoadBalancer
  selector:
    app: mimicrotrm
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8082
