miMicroTRM/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: despliegues1
spec:
  rules:
  #- host: "foo.bar.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/apiMoneda"
        backend:
          service:
            name: mimicrotrm
            port:
              number: 8083
      - pathType: Prefix
        path: "/apiAuth"
        backend:
          service:
            name: mimicroauth
            port:
              number: 8084
